[package]
name = "ibc-apps-more"
version = "0.1.0"
edition = "2021"

[dependencies]
ibc-app-transfer-types = { git = "https://github.com/dzmitry-lahoda-forks/ibc-rs.git", branch = "dz/14", default-features = false, features = [
    "serde",
] }
ibc-core-host-types = { git = "https://github.com/dzmitry-lahoda-forks/ibc-rs.git", branch = "dz/14", default-features = false, features = [
    "serde",
] }
ibc-primitives = { git = "https://github.com/dzmitry-lahoda-forks/ibc-rs.git", branch = "dz/14", default-features = false, features = [
    "serde",
] }
serde-json-wasm = { version = "^1.0.0", default-features = false }
sha2 = { version = "^0.10.8", default-features = false }
bech32 = { version = "^0.9.1", default-features = false }
serde = { version = "^1.0.130", default-features = false }
serde-cw-value = { git = "https://github.com/dzmitry-lahoda-forks/serde-cw-value.git", branch = "dz/3", default-features = false }
schemars = { version = "^0.8.0", default-features = false, optional = true }
cosmwasm-std = { version = "^1.5.0", default-features = false, optional = true }
hex = { version = "^0.4.3", default-features = false }
prost = { version = "^0.12.0", default-features = false }
parity-scale-codec = { version = "^3.6", default-features = false, optional = true}
scale-info = { version = "^2.10", default-features = false, optional = true }

[features]
json-schema = [
    "schemars/derive",
    "ibc-core-host-types/schema",
    "ibc-app-transfer-types/schema",
    "ibc-primitives/schema",
    "serde-cw-value/schema",
]
parity-scale-codec = [
    "ibc-core-host-types/parity-scale-codec",
    "ibc-app-transfer-types/parity-scale-codec",
    "ibc-primitives/parity-scale-codec",
    "dep:parity-scale-codec",
    "dep:scale-info",
]

cosmwasm = ["cosmwasm-std"]
unstable = ["serde-cw-value/unstable"]
std = [
    "serde-json-wasm/std",
    "sha2/std",
    "bech32/std",
    "serde/std",
    "ibc-core-host-types/std",
    "ibc-app-transfer-types/std",
    "ibc-primitives/std",
    "serde-cw-value/std",
]
