[package]
name = "ibc-apps-more"
version = "0.1.0"
edition = "2021"

[dependencies]
ibc-apps = { git = "https://github.com/dzmitry-lahoda-forks/ibc-rs.git", branch = "dz/14", default-features = false, features = ["serde"] }
ibc-core = { git = "https://github.com/dzmitry-lahoda-forks/ibc-rs.git", branch = "dz/14", default-features = false, features = ["serde"] }
ibc-primitives = { git = "https://github.com/dzmitry-lahoda-forks/ibc-rs.git", branch = "dz/14", default-features = false, features = ["serde"] }
serde-json-wasm = { version = "^1.0.0", default-features = false }
sha2 = { version = "^0.10.8", default-features = false }
bech32 = { version = "^0.9.1", default-features = false }
serde = { version = "^1.0.130", default-features = false }
serde-cw-value = { git = "https://github.com/dzmitry-lahoda-forks/serde-cw-value.git", branch = "dz/3", default-features = false }
schemars = { version = "^0.8.0", default-features = false, optional = true }
cosmwasm-std = { version = "^1.5.0", default-features = false, optional = true }
hex = { version = "^0.4.3", default-features = false }
prost = { version = "^0.12.0", default-features = false }

[features]
json-schema = ["schemars/derive", "ibc-core/schema", "ibc-apps/schema", "ibc-primitives/schema", "serde-cw-value/schema"]
cosmwasm = ["cosmwasm-std"]
std = [
    "serde-json-wasm/std",
    "sha2/std",
    "bech32/std",
    "serde/std",
    "ibc-core/std",
    "ibc-apps/std",
    "ibc-primitives/std",
    "serde-cw-value/std",
]
