[package]
name = "ibc-apps"
version = "0.1.0"
edition = "2021"

[dependencies]
ibc = { version = "^0.48.0", default-features = false, features = ["serde"] }
serde-json-wasm = { version = "^1.0.0", default-features = false }
sha2 = { version = "^0.10.8", default-features = false }
bech32 = { version = "^0.9.1", default-features = false }
serde = { version = "^1.0.130", default-features = false }
serde-cw-value = { git = "https://github.com/dzmitry-lahoda-forks/serde-cw-value.git", branch = "dz/3", default-features = false }
schemars = { version = "^0.8.0", default-features = false, optional = true }
cosmwasm-std = { version = "^1.5.0", default-features = false}
hex = { version = "^0.4.3", default-features = false }
prost = { version = "^0.12.0", default-features = false }

[features]
json-schema = ["schemars/derive", "ibc/schema", "serde-cw-value/schema", "std"]
cosmwasm = []
std = [
    "ibc/std",
    "serde-json-wasm/std",
    "sha2/std",
    "bech32/std",
    "serde/std",
    "serde-cw-value/std",
]
